gitops/apps/simon-frey-com-main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simon-frey-com-main
spec:
  selector:
    app: simon-frey-com-main
  ports:
    - port: 80
      targetPort: 80
